<resources>
    <string name="app_name">ParkMe</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_home">Home</string>
    <string name="action_save">Save</string>
    <string name="action_map">Map</string>
    <string name="action_history">History</string>


    <string name="section_format">Hello World from section: %1$d</string>
    <string name="save_save_button">save park</string>
    <string name="setting_driver_name">driver name</string>
    <string name="setting_car_id">car id</string>
    <string name="setting_description">description</string>
    <string name="setting_save_button">SAVE SETTING</string>
    <string name="setting_title">SETTING</string>
    <string name="setting_sub_title">plese save your setting</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_car_toast">success</string>
    <string name="history_driver_button">driver</string>
    <string name="history_car_button">car</string>
    <string name="history_title">HISTORY</string>
    <string name="save_toast">success</string>
    <string name="history_delete_button">clear history</string>
    <string name="history_row_car_description">description</string>
    <string name="history_row_carId">car ID</string>
    <string name="history_row_driver_name">driver name</string>
    <string name="history_row_park_loc">location</string>
    <string name="history_row_timeStamp">time</string>
    <string name="home_title">Park Me</string>
    <string name="setting_last_park">last park</string>
    <string name="setting_time">date</string>
    <string name="map_title">MAP</string>
    <string name="about_title">ABOUT</string>
    <string name="about_my_name">my name</string>
    <string name="about_my_title">Software Developer</string>
    <string name="about_school">my school</string>
    <string name="about_email">mymail@mail.com</string>
    <string name="save_title">SAVE</string>
    <string name="save_update_button">UPDATE LOCATION</string>
    <string name="save_your_loc">your_location</string>
    <string name="setting_park_name">park name</string>
    <string name="history_sub_title">search last parking by driver name or by car ID</string>

</resources>
