<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView5" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/history_title"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textIsSelectable="false"
                android:textColor="@color/base_black"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/history_sub_title"
                android:id="@+id/textView19"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/base_black"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/history_driver_button"
                    android:id="@+id/history_driver_button"
                    android:layout_weight="1"
                    android:textColor="@color/base_black"
                    android:textSize="25dp"
                    android:background="@color/base_green"
                    android:onClick="setListHistoryByDriverName" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/history_car_button"
                    android:id="@+id/history_car_button"
                    android:layout_weight="1"
                    android:textColor="@color/base_black"
                    android:textSize="25dp"
                    android:background="@color/base_light_yellow"
                    android:onClick="setListHistoryByCarId" />

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:id="@+id/history_list"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/history_delete_button"
                android:id="@+id/button4"
                android:textColor="@color/base_black"
                android:textSize="25dp"
                android:background="@color/base_green"
                android:onClick="deleteList"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>