<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/save_title"
                android:id="@+id/textView3"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textIsSelectable="false"
                android:textColor="@color/base_black"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="25dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/save_your_loc"
                    android:id="@+id/textView26"
                    android:textColor="@color/base_black"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:textIsSelectable="true"
                    android:layout_marginTop="15dp" />

            </LinearLayout>

            <WebView
                android:layout_width="fill_parent"
                android:layout_height="230dp"
                android:id="@+id/save_webView"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/setting_park_name"
                    android:id="@+id/textView25"
                    android:textColor="@color/base_black"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:textIsSelectable="true"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/save_park_name_edit"
                    android:textColor="@color/base_yellow"
                    android:shadowColor="@color/base_black"
                    android:text="park"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/save_update_button"
                android:id="@+id/button2"
                android:background="@color/base_green"
                android:onClick="setSaveFragment"
                android:textColor="@color/base_black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/save_save_button"
                android:id="@+id/button"
                android:background="@color/base_green"
                android:onClick="savePark"
                android:textColor="@color/base_black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>