<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="135dp"
    android:background="@color/base_grey"
    android:gravity="center_vertical">

<ImageView
    android:id="@+id/icon"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/action_history"
    android:layout_margin="8dp">
</ImageView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/history_row_car_description"
                android:id="@+id/textView5"
                android:textColor="@color/base_black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/history_row_description_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:textIsSelectable="true"
                android:textColor="@color/base_black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/history_row_carId"
                android:id="@+id/textView7"
                android:textColor="@color/base_black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/history_row_carId_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:textIsSelectable="true"
                android:textColor="@color/base_black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/history_row_driver_name"
                android:id="@+id/textView16"
                android:textColor="@color/base_black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/history_row_driver_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:textIsSelectable="true"
                android:textColor="@color/base_black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/history_row_park_loc"
                android:id="@+id/textView14"
                android:textColor="@color/base_black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/history_row_location_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:textIsSelectable="true"
                android:textColor="@color/base_black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/history_row_timeStamp"
                android:id="@+id/textView18"
                android:textColor="@color/base_black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/history_row_time_edit"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp"
                android:textIsSelectable="true"
                android:textColor="@color/base_black" />
        </TableRow>
    </TableLayout>

</LinearLayout>